# http_req

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: bench.rs  res.txt
examples/: advanced_request_get.rs  authentication.rs  basic.rs  basic_get.rs  chunked.rs  get.rs  head.rs  heavy.rs  post.rs  request_builder_get.rs
examples/get/: Cargo.toml
examples/get_async/: Cargo.toml
examples/get_async/src/: main.rs
examples/head/: Cargo.toml
examples/request_builder_get/: Cargo.toml
src/: async_stream.rs  chunked.rs  error.rs  lib.rs  request.rs  response.rs  stream.rs  tls.rs  uri.rs  url.rs
