[package]
name = "http_req"
version = "0.11.1"
license = "MIT"
description = "simple and lightweight HTTP client with built-in HTTPS support"
repository = "https://github.com/jayjamesjay/http_req"
authors = ["jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "client", "request"]
edition = "2021"

[dependencies]
unicase = "^2.7"

[features]
default = ["native-tls"]
rust-tls = [
    "rustls",
    "rustls-pki-types",
    "webpki",
    "webpki-roots",
    "rustls-pemfile",
]

[dependencies.native-tls]
version = "^0.2"
optional = true

[dependencies.rustls]
version = "^0.23"
optional = true

[dependencies.rustls-pemfile]
version = "^2.1"
optional = true

[dependencies.webpki]
version = "^0.22"
optional = true

[dependencies.webpki-roots]
version = "^0.26"
optional = true

[dependencies.rustls-pki-types]
version = "^1.7"
features = ["alloc"]
optional = true
