[package]
name = "http_req"
version = "0.14.1"
license = "MIT"
description = "simple and lightweight HTTP client with built-in HTTPS support"
repository = "https://github.com/jayjamesjay/http_req"
authors = ["jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "client", "request"]
edition = "2021"

[dependencies]
unicase = "^2.8"
base64 = { version = "^0.22", optional = true }
zeroize = { version = "^1.8", features = ["zeroize_derive"], optional = true }
native-tls = { version = "^0.2", optional = true }
rustls = { version = "^0.23", optional = true }
rustls-pemfile = { version = "^2.2", optional = true }
rustls-pki-types = { version = "^1.12", features = ["alloc"], optional = true }
webpki = { version = "^0.22", optional = true }
webpki-roots = { version = "^1.0", optional = true }

[features]
default = ["native-tls", "auth"]
rust-tls = [
    "rustls",
    "rustls-pki-types",
    "webpki",
    "webpki-roots",
    "rustls-pemfile",
    "auth",
]
auth = ["base64", "zeroize"]
